<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlienAlarm</string>
    <string name="alarm">alarm</string>
    <string name="enter_name_hint">enter name</string>
    <string name="new_alarm">New</string>
    <string name="alarm_arrived">Alarm Arrived</string>
    <string name="delete">Delete</string>
    <string name="alarm_list">Alarm List</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="later">Later</string>
    <string name="no_repeat">No Repeat</string>
    <string name="everyday">Everyday</string>
    <string name="saving_fail">Saving fail</string>
    <string name="pls_enter_name">Please enter a name for alarm</string>
    <string name="pls_enter_ringtone">Please choose a ringtone for alarm</string>
    <string name="invalid_file">The file you chosen is invalid</string>
    <string name="times">Times</string>
    <string name="interval">Interval</string>
    <string name="repeatability">Repeatability</string>
    <string name="ringtone">Ringtone</string>
    <string name="choose_ringtone">Choose Ringtone</string>
    <string name="choose_alarm_times">Choose Alarm Times</string>
    <string name="choose_alarm_interval">Choose Alarm Interval</string>
    <string name="choose_alarm_repeatability">Choose Alarm Repeatability</string>
    <string name="next_alarm">Next Alarm</string>
    <string name="no_alarm">No Valid Alarm</string>

    <string-array name="alarm_times">
        <item>Once</item>
        <item>Twice</item>
        <item>Thrice</item>
    </string-array>
    <string-array name="alarm_interval">
        <item>5 minute</item>
        <item>10 minute</item>
        <item>15 minute</item>
        <item>30 minute</item>
    </string-array>
    <string-array name="alarm_repeatability">
        <item>weekday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>